--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "ambodalle",
+    "username": "hacktiv8-12",
     "password": null,
     "database": "carikamar",
     "host": "127.0.0.1",
